force-app/main/default/objects/ULS_Location__c/ULS_Location__c.object-meta.xml
<CustomObject>
    <description>An object that stores new location requests as it relates to ULS Warehouse accounts.  To be used by Sales, Account Managers and Project Managers.</description>
    <label>ULS Location</label>
    <nameField>
        <label>ULS Location Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ULS Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>