force-app/main/default/objects/ULS_Location__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>This Opportunity is not on a Primary ULS or Prospect Account.  Go to Opportunity and use the Account look-up to the find right Account. The Opportunity will then be able to close.</errorMessage>
        <filterItems>
            <field>Account.Is_ULS_Primary_Acct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ULS Location</relationshipLabel>
    <relationshipName>ULS_Onboarding_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>