force-app/main/default/objects/ULS_Location__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipName>ULS_Onboarding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>