force-app/main/default/objects/ULS_Location__c/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C3PL</fullName>
            </value>
            <value>
                <fullName>XILEF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>