force-app/main/default/objects/ULS_Location__c/fields/Certificate_of_Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Insurance_Status__c</fullName>
    <label>Certificate of Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>