force-app/main/default/objects/ULS_Location__c/fields/Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Time__c</fullName>
    <label>Cut-off Time</label>
    <type>TextArea</type>
</CustomField>