force-app/main/default/objects/ULS_Location__c/fields/Delivery_Appointment_Details__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Appointment_Details__c</fullName>
    <inlineHelpText>What needs to be done in order to ensure we properly communicate inbound inventory to this warehouse?</inlineHelpText>
    <label>Delivery Appt Details</label>
    <type>TextArea</type>
</CustomField>