force-app/main/default/objects/ULS_Location__c/fields/DLOC_Division__c.field-meta.xml
<CustomField>
    <fullName>DLOC_Division__c</fullName>
    <label>DLOC Division?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>