force-app/main/default/objects/ULS_Location__c/fields/OnBoarding_Status__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding_Status__c</fullName>
    <label>OnBoarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress - New WH Customer</fullName>
            </value>
            <value>
                <fullName>In Progress - New WH Location</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>