force-app/main/default/objects/ULS_Location__c/fields/Original_Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ULS Location</relationshipLabel>
    <relationshipName>ULS_Location</relationshipName>
    <type>Lookup</type>
</CustomField>