force-app/main/default/objects/ULS_Location__c/fields/Other_SOP_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Other_SOP_Reqs__c</fullName>
    <label>Other SOP Reqs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>