force-app/main/default/objects/ULS_Location__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>ULS Location (Project Manager)</relationshipLabel>
    <relationshipName>ULS_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>