force-app/main/default/objects/ULS_Location__c/fields/Required_Pallet_Labels__c.field-meta.xml
<CustomField>
    <fullName>Required_Pallet_Labels__c</fullName>
    <label>Required Pallet Labels</label>
    <type>TextArea</type>
</CustomField>