force-app/main/default/objects/ULS_Location__c/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipName>ULS_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>