force-app/main/default/objects/ULS_Location__c/fields/Special_Programs_Systems__c.field-meta.xml
<CustomField>
    <fullName>Special_Programs_Systems__c</fullName>
    <defaultValue>&quot;Examples: UPS Worldship, FedEx Ship Manager, Macro Express, Canadian uFreight, eCommerce&quot;</defaultValue>
    <label>Special Programs/Systems</label>
    <type>TextArea</type>
</CustomField>