force-app/main/default/objects/ULS_Location__c/fields/Transaction_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Frequency__c</fullName>
    <inlineHelpText>Explain the average frequency of activity at this account.  You can count each order processed separately as one transaction (therefore a batch of orders would count as one).</inlineHelpText>
    <label>Transaction Frequency</label>
    <type>TextArea</type>
</CustomField>