force-app/main/default/objects/ULS_Location__c/fields/Transaction_System_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Transaction_System_Inventory__c</fullName>
    <label>Transaction System - Inventory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C3PL</fullName>
            </value>
            <value>
                <fullName>XILEF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>