force-app/main/default/objects/ULS_Location__c/fields/Transaction_System_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transaction_System_Transportation__c</fullName>
    <label>Transaction System - Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XILEF</fullName>
            </value>
            <value>
                <fullName>MGI</fullName>
            </value>
            <value>
                <fullName>CSW</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>