force-app/main/default/objects/ULS_Location__c/fields/Transaction_Types__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Types__c</fullName>
    <label>Transaction Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Non-transaction Accessorials</fullName>
            </value>
            <value>
                <fullName>Outside Carrier</fullName>
            </value>
            <value>
                <fullName>Red Truck</fullName>
            </value>
            <value>
                <fullName>Trans. not touching UWW WH</fullName>
            </value>
            <value>
                <fullName>Drayage</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>