force-app/main/default/objects/ULS_Location__c/fields/Transactions_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Transactions_per_Day__c</fullName>
    <inlineHelpText>Provide the number of transactions (inbound/outbound orders, transportation etc ) that this location partakes in per business day, on average.  If it varies between 5 and 10/day, you can enter 7.5.</inlineHelpText>
    <label>Transactions per Day</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>