force-app/main/default/objects/ULS_Location__c/fields/Transactions_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Transactions_per_Week__c</fullName>
    <inlineHelpText>Provide the number of transactions (orders, etc ) that this location partakes in per week, on average.  If it varies between 500 and 1000/week, you can enter 750</inlineHelpText>
    <label>Transactions per Week</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>