force-app/main/default/objects/ULS_Location__c/fields/WH_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>WH_Agreement_Status__c</fullName>
    <label>WH Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>