force-app/main/default/objects/ULS_Location__c/fields/WH_Contacts__c.field-meta.xml
<CustomField>
    <fullName>WH_Contacts__c</fullName>
    <label>WH Contacts</label>
    <type>TextArea</type>
</CustomField>