force-app/main/default/objects/ULS_Location__c/fields/WH_Volume__c.field-meta.xml
<CustomField>
    <fullName>WH_Volume__c</fullName>
    <label>WH Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>