force-app/main/default/objects/ULS_Location__c/validationRules/Can_Not_Add_ULSLocation_to_Child_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Add_ULSLocation_to_Child_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(),  
NOT(ISBLANK( Account__r.ULS_Primary_Account__c )), 
$User.ProfileId = &quot;00e70000000zvBj&quot;
)</errorConditionFormula>
    <errorMessage>You must add ULS Locations directly to the Primary Account. Click the Lookup Button beside the account name and choose the appropriate account marked as a ULS Primary Account.</errorMessage>
</ValidationRule>